Add professional alpha preview banner with Forza branding

--- a/frontend-only/index.html
+++ b/frontend-only/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/forza-logo-blue.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Forza Products Management</title>
+    <title>Forza Product Management System - Alpha Preview</title>
+    <meta name="description" content="Forza Product Management System Alpha - Browse and explore our comprehensive product catalog. Preview access with read-only functionality." />
+    <meta property="og:title" content="Forza Product Management System - Alpha Preview" />
+    <meta property="og:description" content="Explore the Forza Product Management System - Currently in alpha testing with preview access." />
+    <meta property="og:type" content="website" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
